# sgo-rs

./: .gitignore  Cargo.toml  README-zh.md  README.md
.github/workflows/: cd.yml  ci.yml  tag.yml
src/: cli.rs  file_server.rs  main.rs  style.css  utils.rs
